refactor: rename planType to subscriptionPlan
